--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -219,7 +219,14 @@ h1, h2, h3, h4, h5 {
   margin: 5px;
 }
 
+/* add to home screen */
 
+.add-button {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
 
 
 /* Media Queries */
