--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -70,6 +70,7 @@ body, html {
   display: flex;
   flex-wrap: wrap;
   width: 80%;
+  min-width: 310px;
   margin-top: 15%;
   margin-bottom: 15%;
 }
