--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -2,6 +2,11 @@ ul {
   list-style-type:none;
 }
 
+.caption ul {
+  list-style-type: square;
+}
+
+
 .navbar {
   background-color: black;
   border: black;
