--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -270,6 +270,24 @@ h1, h2, h3, h4, h5 {
   list-style-type: circle;
 }
 
+/* responsive youtube embed */
+/* https://avexdesigns.com/responsive-youtube-embed/ */
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px; height: 0; overflow: hidden;
+}
+ 
+.video-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 
 /* Media Queries */
 
