--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,3 +1,4 @@
+/* use lists to present individual projects */
 ul {
   list-style-type:none;
 }
@@ -6,6 +7,21 @@ ul {
   list-style-type: square;
 }
 
+.caption h2 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.description h4 {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.caption {
+    margin-top: 5px;
+}
 
 .navbar {
   background-color: black;
@@ -13,32 +29,33 @@ ul {
 }
 
 /* Styles for navigation row */
-    #main-nav {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        z-index: 1;
-        background-color: black;
-        color: black;
-    }
+#main-nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    background-color: black;
+    color: black;
+}
 
-    .main-wrapper {
-        margin: 1%;
-        position: relative;
-    }    
+.main-wrapper {
+    margin: 1%;
+    position: relative;
+}
 
-
-body, html {
-    width: 99%;
+/* fixed background image */
+.background-image {
+    width: 100%;
     background-image: url('../images/background_homepage.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    -webkit-background-size: cover;
-    -o-background-size: cover;
-    -moz-background-size: cover;
+    position: absolute;
+    z-index: -2;
 }
+
+/* styling for various section boxes */
 
 .intro-box {
   background-color: black;
@@ -49,14 +66,12 @@ body, html {
   margin-bottom: 15%;
   padding: 25px;
   width: 70%;
-}
-
-.align-right {
-  text-align: right;
+  box-shadow: 0.3em 0.3em 1em rgba(0,0,0,1);
 }
 
 .dark-row {
   background-color: #000033;
+  border-radius: 25px;
   border: 1px solid white;
   /*padding: 25px;*/
   color: white;
@@ -65,10 +80,12 @@ body, html {
   width: 90%;
   margin-top: 15%;
   margin-bottom: 15%;
+  box-shadow: 0.3em 0.3em 1em rgba(0,0,0,1);
 }
 
 .dark-orange-row {
   background-color: #cc6600;
+  border-radius: 25px;
   border: 1px solid white;
   /*padding: 25px;*/
   color: white;
@@ -78,10 +95,12 @@ body, html {
   min-width: 310px;
   margin-top: 15%;
   margin-bottom: 15%;
+  box-shadow: 0.3em 0.3em 1em rgba(0,0,0,1);
 }
 
 .dark-rose-row {
   background-color: #7f0337;
+  border-radius: 25px;
   border: 1px solid white;
   /*padding: 25px;*/
   color: white;
@@ -91,10 +110,12 @@ body, html {
   min-width: 310px;
   margin-top: 15%;
   margin-bottom: 15%;
+  box-shadow: 0.3em 0.3em 1em rgba(0,0,0,1);
 }
 
 .white-row {
   background-color: #ffffff;
+  border-radius: 25px;
   border: 1px solid black;
   padding: 25px;
   /*display: flex;*/
@@ -105,7 +126,6 @@ body, html {
   margin-bottom: 15%;
 }
 
-
 .dark-row-footer {
   background-color: #000033;
   color: white;
@@ -113,6 +133,12 @@ body, html {
   flex-wrap: wrap;
   width: 100%;
   padding: 10px;
+}
+
+/* other styling */
+
+.align-right {
+  text-align: right;
 }
 
 #credentials {
@@ -185,6 +211,7 @@ body, html {
   display: inline-block;
   overflow: hidden;
   position: relative;
+  box-shadow: 0.3em 0.3em 1em rgba(0,0,0,1);
 }
 
 .thumbnail iframe {
@@ -204,6 +231,31 @@ h1, h2, h3, h4, h5 {
   width: 100%;
 }
 
+
+/* flexbox styling */
+.flex-box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.flex-box-wrap, .project-tile {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.flex-item {
+  padding: 10px 20px 10px 20px;
+}
+
+.flex-right {
+  margin-left: auto;
+}
 
 /* Responsive Layout */
 
@@ -244,7 +296,7 @@ h1, h2, h3, h4, h5 {
   margin-right: auto;
   margin-bottom: 20px;
   margin-top: 20px;
-  max-width: calc(1200px * 0.25);
+  width: 100%;
 }
 
 .portfolio-list li p {
@@ -253,6 +305,18 @@ h1, h2, h3, h4, h5 {
 
 .portfolio-list form input {
   margin: 5px;
+}
+
+.languages {
+  text-align: left;
+  margin: 5px;
+  padding: 5px;
+  width: auto;
+}
+
+.languages h2 {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 /* add to home screen */
@@ -277,7 +341,7 @@ h1, h2, h3, h4, h5 {
   padding-bottom: 56.25%;
   padding-top: 30px; height: 0; overflow: hidden;
 }
- 
+
 .video-container iframe,
 .video-container object,
 .video-container embed {
@@ -290,23 +354,81 @@ h1, h2, h3, h4, h5 {
 
 
 /* Standardize buttons */
-.btn-default {
-    color: #333;
-    margin: 5px;
-    background-color: #fff;
-    border-color: #ccc;
+#links p {
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: hsl(338, 48%, 36%);
+  box-shadow: 0.3em 0.3em 1em rgba(0,0,0,0.5);
+  color: white;
+  text-align: center;
+  margin-top: 10px;
 }
+
+#links p:hover{
+  color: hsl(45, 90%, 50%);
+  text-shadow: 2px 2px 2px gray;
+}
+
+
+/* Flask Icon */
+.icon-flask {
+  background-image: url(https://flask.palletsprojects.com/en/1.1.x/)
+}
+
+
 
 /* Media Queries */
 
-@media screen and (max-width: 375px ) {
+
+@media screen and (max-width: 400px) {
   .intro-box {
     width: 100%;
     margin-top: 100px;
   }
-  
+
  .dark-row {
     width: auto;
   }
- 
+
+}
+
+@media screen and (max-width: 1200px) {
+  .project-tile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border-radius: 5px;
+    padding: 10px;
+  }
+
+  .project-tile h1, h2, h3, strong {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  .languages {
+    text-align: center;
+    margin: 5px;
+    padding: 5px;
+    width: auto;
+  }
+
+  .title {
+    text-align: center;
+  }
+
+  .description h4 {
+    text-align: center;
+  }
+
+  .languages {
+    text-align: center;
+    margin: 5px;
+    padding: 5px;
+    width: auto;
+  }
+
 }
