--- a/assets/stylesheets/fonts.css
+++ b/assets/stylesheets/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?mgmdth');
-  src:  url('../fonts/icomoon.eot?mgmdth#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?mgmdth') format('truetype'),
-    url('../fonts/icomoon.woff?mgmdth') format('woff'),
-    url('../fonts/icomoon.svg?mgmdth#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?3jne85');
+  src:  url('../fonts/icomoon.eot?3jne85#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?3jne85') format('truetype'),
+    url('../fonts/icomoon.woff?3jne85') format('woff'),
+    url('../fonts/icomoon.svg?3jne85#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-microsoftazure:before {
+  content: "\e900";
+  color: #0089d6;
+}
 .icon-flask:before {
   content: "\66";
 }
