--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -230,6 +230,7 @@ h1, h2, h3, h4, h5 {
 
 .cred {
   width: 30%;
+  box-shadow: 0.3em 0.3em 1em rgba(0,0,0,1);
 }
 
 
@@ -415,6 +416,7 @@ h1, h2, h3, h4, h5 {
 
   .cred {
     width: 40%;
+    box-shadow: 0.3em 0.3em 1em rgba(0,0,0,1);
   }
 
 }
@@ -451,6 +453,7 @@ h1, h2, h3, h4, h5 {
 
   .cred {
     width: 90%;
+    box-shadow: 0.3em 0.3em 1em rgba(0,0,0,1);
   }
 
 }
